################################################################################
##                                    lepage
##
## This file is distributed under the 4-clause Berkeley Software Distribution
## License. See LICENSE for details.
################################################################################

add_library(${CMAKE_PROJECT_NAME}-details INTERFACE
    Traits.h
)
